--- a/locale/fi.json
+++ b/locale/fi.json
@@ -3,7 +3,7 @@
     "cant_connect_ctrlport": "Ei voi yhdistää Torin ohjausporttiin portissa {0}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
     "cant_connect_socksport": "Ei voi yhdistää Tor SOCKS5 palveluun portissa {0}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
     "preparing_files": "Valmistellaan tiedostoja jaettavaksi.",
-    "wait_for_hs": "Odotetaan salaisen palvelimen valmistumista:",
+    "wait_for_hs": "Odotetaan piilopalvelun valmistumista:",
     "wait_for_hs_trying": "Yritetään...",
     "wait_for_hs_nope": "Ei vielä valmis.",
     "wait_for_hs_yup": "Valmis!",
@@ -23,10 +23,10 @@
     "error_tails_unknown_root": "Tuntematon virhe Tailsissa",
     "help_tails_port": "Vain Tails: portti palomuurin läpi, käynnistetään salainen palvelin",
     "help_local_only": "Älä käytä Toria: vain ohjelmakehitykseen",
-    "help_stay_open": "Pidä salattu palvelin käynnissä latauksen jälkeen.",
+    "help_stay_open": "Pidä piilopalvelu käynnissä latauksen jälkeen.",
     "help_debug": "Tallentaa virheet levylle",
     "help_filename": "Luettele jaettavat tiedostot tai kansiot",
-    "gui_drag_and_drop": "Vedä ja pudota tiedostot tänne",
+    "gui_drag_and_drop": "Vedä ja pudota\ntiedostot tänne",
     "gui_add_files": "Lisää tiedostoja",
     "gui_add_folder": "Lisää kansio",
     "gui_delete": "Poista",
