--- a/locale/nl.json
+++ b/locale/nl.json
@@ -1,6 +1,7 @@
 {
     "connecting_ctrlport": "Verbinden met de Tor controle port om een verborgen service op te zetten op poort {0}.",
-    "cant_connect_ctrlport": "Kan niet verbinden met de Tor controle poort op poorten {0}. Draait Tor?",
+    "cant_connect_ctrlport": "Kan geen verbinding maken met Tor controle poort op poort {0}. OnionShare heeft de Tor Browser op de achtergrond nodig om te kunnen werken. Deze kan je verkrijgen via https://www.torproject.org/.",
+    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via from https://www.torproject.org/.",
     "preparing_files": "Bestanden om te delen aan het voorbereiden.",
     "wait_for_hs": "Wachten op gereed zijn van HS:",
     "wait_for_hs_trying": "Proberen...",
@@ -17,12 +18,13 @@
     "close_on_finish": "Stop server automatisch",
     "choose_file": "Kies een bestand om te delen",
     "closing_automatically": "Sluit nu automatisch omdat download gereed is",
+    "large_filesize": "Waarschuwing: Versturen van grote bestanden kan uren duren",
     "error_tails_invalid_port": "Ongeldige waarde, poort moet een integer zijn",
     "error_tails_unknown_root": "Onbekende fout met het Tails root proces",
     "help_tails_port": "Alleen Tails: poort voor het openen van firewall, starten verborgen service",
     "help_local_only": "Maak geen gebruik van Tor, alleen voor ontwikkeling",
     "help_stay_open": "Laat verborgen service draaien nadat download gereed is",
-    "help_debug": "Log fouten naar harde schrijf",
+    "help_debug": "Log fouten naar harde schijf",
     "help_filename": "Lijst van bestanden of mappen om te delen",
     "gui_drag_and_drop": "Sleep en zet\nbestanden hier neer",
     "gui_add_files": "Bestanden toevoegen",
@@ -35,5 +37,8 @@
     "gui_copy_url": "Kopier URL",
     "gui_downloads": "Downloads:",
     "gui_copied_url": "URL gekopieerd naar klembord",
-    "gui_starting_server": "Moment geduld, server wordt gestart..."
+    "gui_starting_server1": "Tor verborgen service wordt gestart...",
+    "gui_starting_server2": "Bestanden verwerken...",
+    "gui_starting_server3": "Wachten op Tor verborgen service...",
+    "gui_please_wait": "Moment geduld..."
 }
