--- a/locale/it.json
+++ b/locale/it.json
@@ -7,6 +7,5 @@
     "gui_copied_url": "URL copiato negli appunti",
     "download_page_loaded": "Pagina di download caricata",
     "other_page_loaded": "Un altra pagina é stata caricata",
-    "close_on_finish": "Chiudi automaticamente",
-    "choose_file": "Scegli un file da condividere"
+    "close_on_finish": "Chiudi automaticamente"
 }
