--- a/locale/no.json
+++ b/locale/no.json
@@ -7,6 +7,5 @@
     "gui_copied_url": "Kopierte URL-en til utklippstavlen",
     "download_page_loaded": "Nedlastingsside lastet",
     "other_page_loaded": "En annen side har blitt lastet",
-    "close_on_finish": "Lukk automatisk",
-    "choose_file": "Velg en fil å dele"
+    "close_on_finish": "Lukk automatisk"
 }
