--- a/locale/pt.json
+++ b/locale/pt.json
@@ -7,6 +7,5 @@
     "gui_copied_url": "URL foi copiado para área de transferência",
     "download_page_loaded": "Página de download carregada",
     "other_page_loaded": "Outra página tem sido carregada",
-    "close_on_finish": "Fechar automaticamente",
-    "choose_file": "Escolhe um arquivo para compartilhar"
+    "close_on_finish": "Fechar automaticamente"
 }
