--- a/locale/fr.json
+++ b/locale/fr.json
@@ -15,7 +15,6 @@
     "download_page_loaded": "Page de téléchargement chargée",
     "other_page_loaded": "URL chargée",
     "close_on_finish": "Arrêter le serveur automatiquement",
-    "choose_file": "Sélectionnez un fichier à partager",
     "closing_automatically": "Fermeture automatique car le téléchargement est fini",
     "error_tails_invalid_port": "Valeur invalide, le port doit être un nombre entier",
     "error_tails_unknown_root": "Erreur inconnue avec un processus root sur Tails",
@@ -34,6 +33,5 @@
     "gui_stop_server": "Arrêter le serveur",
     "gui_copy_url": "Copier URL",
     "gui_downloads": "Téléchargements :",
-    "gui_copied_url": "URL copié dans le presse-papier",
-    "gui_starting_server": "Veuillez patienter, le serveur démarre..."
+    "gui_copied_url": "URL copié dans le presse-papier"
 }
