specify types in all str.format() calls (fixes #169)

--- a/locale/en.json
+++ b/locale/en.json
@@ -1,7 +1,7 @@
 {
-    "connecting_ctrlport": "Connecting to Tor control port to set up hidden service on port {0}.",
-    "cant_connect_ctrlport": "Can't connect to Tor control port on port {0}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
-    "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
+    "connecting_ctrlport": "Connecting to Tor control port to set up hidden service on port {0:d}.",
+    "cant_connect_ctrlport": "Can't connect to Tor control port on port {0:d}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
+    "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0:d}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "preparing_files": "Preparing files to share.",
     "wait_for_hs": "Waiting for HS to be ready:",
     "wait_for_hs_trying": "Trying...",
@@ -9,7 +9,7 @@
     "wait_for_hs_yup": "Ready!",
     "give_this_url": "Give this URL to the person you're sending the file to:",
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
-    "not_a_file": "{0} is not a file.",
+    "not_a_file": "{0:s} is not a file.",
     "download_size": "Download size",
     "filename": "Filename",
     "size": "Size",
