--- a/locale/es.json
+++ b/locale/es.json
@@ -1,7 +1,7 @@
 {
-    "connecting_ctrlport": "Conectando a puerto control de Tor para configurar servicio oculto en puerto {0}.",
-    "cant_connect_ctrlport": "No se pudo conectar a puerto control de Tor en puertos {0}. ¿Está funcionando Tor?",
-    "cant_connect_socksport": "No se pudo conectar al servidor SOCKS5 de Tor en el puerto {0}. ¿Está funcionando Tor?",
+    "connecting_ctrlport": "Conectando a puerto control de Tor para configurar servicio oculto en puerto {0:d}.",
+    "cant_connect_ctrlport": "No se pudo conectar a puerto control de Tor en puertos {0:d}. ¿Está funcionando Tor?",
+    "cant_connect_socksport": "No se pudo conectar al servidor SOCKS5 de Tor en el puerto {0:d}. ¿Está funcionando Tor?",
     "preparing_files": "Preparando los archivos para compartir.",
     "wait_for_hs": "Esperando a que HS esté listo:",
     "wait_for_hs_trying": "Probando...",
@@ -9,7 +9,7 @@
     "wait_for_hs_yup": "Listo!",
     "give_this_url": "Entregue esta URL a la persona a la que está enviando el archivo:",
     "ctrlc_to_stop":  "Pulse Ctrl-C para detener el servidor",
-    "not_a_file": "{0} no es un archivo.",
+    "not_a_file": "{0:s} no es un archivo.",
     "download_size": "Tamaño de la descarga",
     "filename": "Archivo",
     "size": "Tamaño",
