--- a/locale/fi.json
+++ b/locale/fi.json
@@ -1,7 +1,7 @@
 {
-    "connecting_ctrlport": "Yhdistetään Torin ohjausporttiin että saadaan salattu palvelin porttiin {0}.",
-    "cant_connect_ctrlport": "Ei voi yhdistää Torin ohjausporttiin portissa {0}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
-    "cant_connect_socksport": "Ei voi yhdistää Tor SOCKS5 palveluun portissa {0}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
+    "connecting_ctrlport": "Yhdistetään Torin ohjausporttiin että saadaan salattu palvelin porttiin {0:d}.",
+    "cant_connect_ctrlport": "Ei voi yhdistää Torin ohjausporttiin portissa {0:d}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
+    "cant_connect_socksport": "Ei voi yhdistää Tor SOCKS5 palveluun portissa {0:d}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
     "preparing_files": "Valmistellaan tiedostoja jaettavaksi.",
     "wait_for_hs": "Odotetaan piilopalvelun valmistumista:",
     "wait_for_hs_trying": "Yritetään...",
@@ -9,7 +9,7 @@
     "wait_for_hs_yup": "Valmis!",
     "give_this_url": "Anna tämä URL-osoite henkilölle, jolle lähetät tiedostot:",
     "ctrlc_to_stop":  "Näppäin Ctrl-C pysäyttää palvelimen",
-    "not_a_file": "{0} Ei ole tiedosto.",
+    "not_a_file": "{0:s} Ei ole tiedosto.",
     "download_size": "Download size",
     "filename": "Filename",
     "size": "Size",
