--- a/locale/de.json
+++ b/locale/de.json
@@ -1,7 +1,7 @@
 {
-    "connecting_ctrlport": "Verbinde zum Tor-Kontrollport um den versteckten Dienst auf Port {0} laufen zu lassen.",
-    "cant_connect_ctrlport": "Konnte keine Verbindung zum Tor-Kontrollport auf Port {0} aufbauen. Läuft Tor?",
-    "cant_connect_socksport": "Konnte keine Verbindung zum Tor SOCKS5 Server auf Port {0} herstellen.  OnionShare setzt voraus dass Tor Browser im Hintergrund läuft. Wenn du noch ihn noch noch nicht hast kannst du ihn unter https://www.torproject.org/ herunterladen.",
+    "connecting_ctrlport": "Verbinde zum Tor-Kontrollport um den versteckten Dienst auf Port {0:d} laufen zu lassen.",
+    "cant_connect_ctrlport": "Konnte keine Verbindung zum Tor-Kontrollport auf Port {0:d} aufbauen. Läuft Tor?",
+    "cant_connect_socksport": "Konnte keine Verbindung zum Tor SOCKS5 Server auf Port {0:d} herstellen.  OnionShare setzt voraus dass Tor Browser im Hintergrund läuft. Wenn du noch ihn noch noch nicht hast kannst du ihn unter https://www.torproject.org/ herunterladen.",
     "preparing_files": "Dateien werden vorbereitet.",
     "wait_for_hs": "Warte auf HS:",
     "wait_for_hs_trying": "Verbindungsversuch...",
@@ -9,7 +9,7 @@
     "wait_for_hs_yup": "Bereit!",
     "give_this_url": "Geben Sie diese URL der Person, der Sie die Datei zusenden möchten:",
     "ctrlc_to_stop":  "Drücken Sie Strg+C um den Server anzuhalten",
-    "not_a_file": "{0} ist keine Datei.",
+    "not_a_file": "{0:s} ist keine Datei.",
     "download_size": "Dateigrösse",
     "filename": "Dateiname",
     "size": "Dateigröße",
