--- a/locale/fr.json
+++ b/locale/fr.json
@@ -1,6 +1,6 @@
 {
-    "connecting_ctrlport": "Connexion au réseau Tor pour mettre en place un Hidden Service sur le port {0}.",
-    "cant_connect_ctrlport": "Impossible de se connecter au port de contrôle Tor sur le port {0}. Est-ce que Tor tourne ?",
+    "connecting_ctrlport": "Connexion au réseau Tor pour mettre en place un Hidden Service sur le port {0:d}.",
+    "cant_connect_ctrlport": "Impossible de se connecter au port de contrôle Tor sur le port {0:d}. Est-ce que Tor tourne ?",
     "preparing_files": "Préparation des fichiers à partager.",
     "wait_for_hs": "En attente du HS:",
     "wait_for_hs_trying": "Tentative...",
@@ -8,7 +8,7 @@
     "wait_for_hs_yup": "Prêt !",
     "give_this_url": "Donnez cette URL à la personne qui doit recevoir le fichier :",
     "ctrlc_to_stop":  "Ctrl-C arrête le serveur",
-    "not_a_file": "{0} n'est pas un fichier.",
+    "not_a_file": "{0:s} n'est pas un fichier.",
     "download_size": "Taille de téléchargement",
     "filename": "Nom du fichier",
     "size": "Taille",
