--- a/locale/it.json
+++ b/locale/it.json
@@ -1,9 +1,9 @@
 {
-    "connecting_ctrlport": "Connessione alla porta di controllo di Tor per inizializzare il servizio nascosto sulla porta {0}.",
-    "cant_connect_ctrlport": "Impossibile connettere alla porta di controllo di Tor tramite le porte {0}. Tor è stato avviato?",
+    "connecting_ctrlport": "Connessione alla porta di controllo di Tor per inizializzare il servizio nascosto sulla porta {0:d}.",
+    "cant_connect_ctrlport": "Impossibile connettere alla porta di controllo di Tor tramite le porte {0:d}. Tor è stato avviato?",
     "give_this_url": "Comunica questo URL alla persona a cui vuoi inviare il file:",
     "ctrlc_to_stop":  "Premi Ctrl-C per fermare il server",
-    "not_a_file": "{0} non è un file.",
+    "not_a_file": "{0:s} non è un file.",
     "gui_copied_url": "URL copiato negli appunti",
     "download_page_loaded": "Pagina di download caricata",
     "other_page_loaded": "Un altra pagina é stata caricata",
