--- a/locale/nl.json
+++ b/locale/nl.json
@@ -1,7 +1,7 @@
 {
-    "connecting_ctrlport": "Verbinden met de Tor controle port om een verborgen service op te zetten op poort {0}.",
-    "cant_connect_ctrlport": "Kan geen verbinding maken met Tor controle poort op poort {0}. OnionShare heeft de Tor Browser op de achtergrond nodig om te kunnen werken. Deze kan je verkrijgen via https://www.torproject.org/.",
-    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via from https://www.torproject.org/.",
+    "connecting_ctrlport": "Verbinden met de Tor controle port om een verborgen service op te zetten op poort {0:d}.",
+    "cant_connect_ctrlport": "Kan geen verbinding maken met Tor controle poort op poort {0:d}. OnionShare heeft de Tor Browser op de achtergrond nodig om te kunnen werken. Deze kan je verkrijgen via https://www.torproject.org/.",
+    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0:d}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via from https://www.torproject.org/.",
     "preparing_files": "Bestanden om te delen aan het voorbereiden.",
     "wait_for_hs": "Wachten op gereed zijn van HS:",
     "wait_for_hs_trying": "Proberen...",
@@ -9,7 +9,7 @@
     "wait_for_hs_yup": "Gereed!",
     "give_this_url": "Geef deze URL aan de persoon aan wie je dit bestand verzend:",
     "ctrlc_to_stop":  "Druk Ctrl-C om de server te stoppen",
-    "not_a_file": "{0} is geen bestand.",
+    "not_a_file": "{0:s} is geen bestand.",
     "download_size": "Downloadgrootte",
     "filename": "Bestandsnaam",
     "size": "Grootte",
