--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,9 +1,9 @@
 {
-    "connecting_ctrlport": "Соединяемся с контрольным портом Tor для создания скрытого сервиса на порту {0}.",
-    "cant_connect_ctrlport": "Невозможно соединиться с контрольным портом Tor на порту {0}. Tor запущен?",
+    "connecting_ctrlport": "Соединяемся с контрольным портом Tor для создания скрытого сервиса на порту {0:d}.",
+    "cant_connect_ctrlport": "Невозможно соединиться с контрольным портом Tor на порту {0:d}. Tor запущен?",
     "give_this_url": "Отправьте эту ссылку тому человеку, которому вы хотите передать файл:",
     "ctrlc_to_stop":  "Нажмите Ctrl-C чтобы остановить сервер",
-    "not_a_file": "{0} не является файлом.",
+    "not_a_file": "{0:s} не является файлом.",
     "gui_copied_url": "Ссылка скопирована в буфер обмена",
     "download_page_loaded": "Страница закачки загружена",
     "other_page_loaded": "Другая страница была загружена",
