--- a/locale/en.json
+++ b/locale/en.json
@@ -1,7 +1,7 @@
 {
     "connecting_ctrlport": "Connecting to Tor control port to set up hidden service on port {0:d}.",
-    "cant_connect_ctrlport": "Can't connect to Tor control port on port {0:d}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
-    "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0:d}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
+    "cant_connect_ctrlport": "Can't connect to Tor control port on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
+    "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "preparing_files": "Preparing files to share.",
     "wait_for_hs": "Waiting for HS to be ready:",
     "wait_for_hs_trying": "Trying...",
