--- a/locale/fi.json
+++ b/locale/fi.json
@@ -1,7 +1,7 @@
 {
     "connecting_ctrlport": "Yhdistetään Torin ohjausporttiin että saadaan salattu palvelin porttiin {0:d}.",
-    "cant_connect_ctrlport": "Ei voi yhdistää Torin ohjausporttiin portissa {0:d}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
-    "cant_connect_socksport": "Ei voi yhdistää Tor SOCKS5 palveluun portissa {0:d}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
+    "cant_connect_ctrlport": "Ei voi yhdistää Torin ohjausporttiin portissa {0:s}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
+    "cant_connect_socksport": "Ei voi yhdistää Tor SOCKS5 palveluun portissa {0:s}. OnionShare tarvitsee Tor Browserin toimimaan taustalla. Jos sinulla ei ole sitä niin voit hakea sen osoitteesta https://www.torproject.org/.",
     "preparing_files": "Valmistellaan tiedostoja jaettavaksi.",
     "wait_for_hs": "Odotetaan piilopalvelun valmistumista:",
     "wait_for_hs_trying": "Yritetään...",
