--- a/locale/no.json
+++ b/locale/no.json
@@ -1,6 +1,6 @@
 {
     "connecting_ctrlport": "Kobler til Tors kontroll-port for å sette opp en gjemt tjeneste på port {0:d}.",
-    "cant_connect_ctrlport": "Klarte ikke å koble til Tors kontroll-porter {0:d}. Sjekk at Tor kjører.",
+    "cant_connect_ctrlport": "Klarte ikke å koble til Tors kontroll-porter {0:s}. Sjekk at Tor kjører.",
     "give_this_url": "Gi personen du vil sende filen til denne URL-en:",
     "ctrlc_to_stop":  "Trykk Ctrl+C for å stoppe serveren.",
     "not_a_file": "{0:s} er ikke en fil.",
