--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,6 +1,6 @@
 {
     "connecting_ctrlport": "Соединяемся с контрольным портом Tor для создания скрытого сервиса на порту {0:d}.",
-    "cant_connect_ctrlport": "Невозможно соединиться с контрольным портом Tor на порту {0:d}. Tor запущен?",
+    "cant_connect_ctrlport": "Невозможно соединиться с контрольным портом Tor на порту {0:s}. Tor запущен?",
     "give_this_url": "Отправьте эту ссылку тому человеку, которому вы хотите передать файл:",
     "ctrlc_to_stop":  "Нажмите Ctrl-C чтобы остановить сервер",
     "not_a_file": "{0:s} не является файлом.",
