In Linux, create HS dir in /tmp/onionshare/* (#185), and also connect to Tor control port more robustly

--- a/locale/en.json
+++ b/locale/en.json
@@ -40,5 +40,7 @@
     "gui_starting_server1": "Starting Tor hidden service...",
     "gui_starting_server2": "Crunching files...",
     "gui_starting_server3": "Waiting for Tor hidden service...",
-    "gui_please_wait": "Please wait..."
+    "gui_please_wait": "Please wait...",
+    "error_hs_dir_cannot_create": "Cannot create hidden service dir {0:s}",
+    "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable"
 }
