tweak start/stop server language to make it friendlier (fixes #192)

--- a/locale/en.json
+++ b/locale/en.json
@@ -15,7 +15,7 @@
     "size": "Size",
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "URL loaded",
-    "close_on_finish": "Stop server automatically",
+    "close_on_finish": "Stop sharing automatically",
     "closing_automatically": "Closing automatically because download finished",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
@@ -31,8 +31,8 @@
     "gui_delete": "Delete",
     "gui_choose_files": "Choose files",
     "gui_choose_folder": "Choose folder",
-    "gui_start_server": "Start Server",
-    "gui_stop_server": "Stop Server",
+    "gui_start_server": "Start Sharing",
+    "gui_stop_server": "Stop Sharing",
     "gui_copy_url": "Copy URL",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Canceled",
