--- a/locale/nl.json
+++ b/locale/nl.json
@@ -35,9 +35,12 @@
     "gui_stop_server": "Stop server",
     "gui_copy_url": "Kopier URL",
     "gui_downloads": "Downloads:",
+    "gui_canceled": "Afgebroken",
     "gui_copied_url": "URL gekopieerd naar klembord",
     "gui_starting_server1": "Tor verborgen service wordt gestart...",
     "gui_starting_server2": "Bestanden verwerken...",
     "gui_starting_server3": "Wachten op Tor verborgen service...",
-    "gui_please_wait": "Moment geduld..."
+    "gui_please_wait": "Moment geduld...",
+    "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
+    "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar"
 }
