--- a/locale/en.json
+++ b/locale/en.json
@@ -23,6 +23,7 @@
     "help_tails_port": "Tails only: port for opening firewall, starting hidden service",
     "help_local_only": "Do not attempt to use tor: for development only",
     "help_stay_open": "Keep hidden service running after download has finished",
+    "help_transparent_torification": "My system is transparently torified",
     "help_debug": "Log errors to disk",
     "help_filename": "List of files or folders to share",
     "gui_drag_and_drop": "Drag and drop\nfiles here",
