Moved hidden service login into separate file. Prefer to use ephemeral hidden services now if they are available. Ephermal does not yet work, but old hidservdir still works.

--- a/locale/en.json
+++ b/locale/en.json
@@ -43,5 +43,6 @@
     "gui_starting_server3": "Waiting for Tor hidden service...",
     "gui_please_wait": "Please wait...",
     "error_hs_dir_cannot_create": "Cannot create hidden service dir {0:s}",
-    "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable"
+    "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable",
+    "using_ephemeral": "Using ephemeral Tor hidden service"
 }
