Fixed call to create_ephemeral_hidden_service, and also await_publication=True to make the app.wait_for_hs() call obsolete

--- a/locale/en.json
+++ b/locale/en.json
@@ -44,5 +44,5 @@
     "gui_please_wait": "Please wait...",
     "error_hs_dir_cannot_create": "Cannot create hidden service dir {0:s}",
     "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable",
-    "using_ephemeral": "Using ephemeral Tor hidden service"
+    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication"
 }
