--- a/locale/cs.json
+++ b/locale/cs.json
@@ -3,7 +3,7 @@
     "cant_connect_ctrlport": "Nejde se připojit na kontrolní port Toru na portu {0:s}. OnionShare vyžaduje, aby Tor Browser běžel na pozadí. Pokud ho nemáte, můžete ho stáhnout z https://www.torproject.org/.",
     "cant_connect_socksport": "Nejde se připojit na Tor SOCKS5 server na portu {0:s}. OnionShare vyžaduje, aby Tor Browser běžel na pozadí. Pokud ho nemáte, můžete ho stáhnout z https://www.torproject.org/.",
     "preparing_files": "Připravuji soubory na sdílení.",
-    "wait_for_hs": "Čekání až bude hidden service připravena:",
+    "wait_for_hs": "Čekám až bude hidden service připravena:",
     "wait_for_hs_trying": "Zkouším...",
     "wait_for_hs_nope": "Ještě nepřipraven.",
     "wait_for_hs_yup": "Připraven!",
