--- a/locale/nl.json
+++ b/locale/nl.json
@@ -1,7 +1,7 @@
 {
     "connecting_ctrlport": "Verbinden met de Tor controle port om een verborgen service op te zetten op poort {0:d}.",
     "cant_connect_ctrlport": "Kan geen verbinding maken met Tor controle poort op poort {0:s}. OnionShare heeft de Tor Browser op de achtergrond nodig om te kunnen werken. Deze kan je verkrijgen via https://www.torproject.org/.",
-    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0:s}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via from https://www.torproject.org/.",
+    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0:s}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via https://www.torproject.org/.",
     "preparing_files": "Bestanden om te delen aan het voorbereiden.",
     "wait_for_hs": "Wachten op gereed zijn van HS:",
     "wait_for_hs_trying": "Proberen...",
@@ -20,6 +20,7 @@
     "help_tails_port": "Alleen Tails: poort voor het openen van firewall, starten verborgen service",
     "help_local_only": "Maak geen gebruik van Tor, alleen voor ontwikkeling",
     "help_stay_open": "Laat verborgen service draaien nadat download gereed is",
+    "help_transparent_torification": "Mijn systeem gebruikt Tor als proxyserver",
     "help_debug": "Log fouten naar harde schijf",
     "help_filename": "Lijst van bestanden of mappen om te delen",
     "gui_drag_and_drop": "Sleep en zet\nbestanden hier neer",
@@ -34,10 +35,11 @@
     "gui_downloads": "Downloads:",
     "gui_canceled": "Afgebroken",
     "gui_copied_url": "URL gekopieerd naar klembord",
-    "gui_starting_server1": "Tor verborgen service wordt gestart...",
+    "gui_starting_server1": "Tor hidden service wordt gestart...",
     "gui_starting_server2": "Bestanden verwerken...",
-    "gui_starting_server3": "Wachten op Tor verborgen service...",
+    "gui_starting_server3": "Wachten op Tor hidden service...",
     "gui_please_wait": "Moment geduld...",
     "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
     "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar"
+    "using_ephemeral": "Kortstondige Tor hidden service gestart en in afwachting van publicatie"
 }
