--- a/locale/nl.json
+++ b/locale/nl.json
@@ -40,6 +40,6 @@
     "gui_starting_server3": "Wachten op Tor hidden service...",
     "gui_please_wait": "Moment geduld...",
     "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
-    "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar"
+    "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar",
     "using_ephemeral": "Kortstondige Tor hidden service gestart en in afwachting van publicatie"
 }
