Minor fixes (proposal)

--- a/locale/es.json
+++ b/locale/es.json
@@ -15,10 +15,10 @@
     "close_on_finish": "Apagar el servidor automáticamente.",
     "closing_automatically": "Apagando automáticamente porque la descarga finalizó",
     "error_tails_invalid_port": "Valor inválido, el puerto debe ser un entero",
-    "error_tails_unknown_root": "Error desconocido en el proceso de Tails corriendo como root",
+    "error_tails_unknown_root": "Error desconocido en el proceso de Tails ejecutando como root",
     "help_tails_port": "Sólo Tails: puerto para abrir en el firewall, al levantar el servicio oculto",
-    "help_local_only": "No intentar usar tor: para desarrollo solamente",
-    "help_stay_open": "Mantener el servicio oculto corriendo después de que la descarga haya finalizado",
+    "help_local_only": "No intentar usar Tor: sólo para desarrollo",
+    "help_stay_open": "Mantener el servicio oculto ejecutando después de que la descarga haya finalizado",
     "help_debug": "Guardar registro de errores en el disco",
     "help_filename": "Lista de archivos o carpetas para compartir",
     "gui_drag_and_drop": "Arrastre\narchivos aquí",
