Confirm when user tries to close the GUI window (fixes #264)

--- a/locale/en.json
+++ b/locale/en.json
@@ -45,5 +45,6 @@
     "gui_download_progress_complete": "%p%, Time Elapsed: {0:s}",
     "gui_download_progress_starting": "{0:s}, %p% (Computing ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
-    "version_string": "Onionshare {0:s} | https://onionshare.org/"
+    "version_string": "Onionshare {0:s} | https://onionshare.org/",
+    "gui_quit_warning": "Are you sure you want to quit?\nThe URL you are sharing won't exist anymore."
 }
