--- a/locale/en.json
+++ b/locale/en.json
@@ -46,5 +46,7 @@
     "gui_download_progress_starting": "{0:s}, %p% (Computing ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
-    "gui_quit_warning": "Are you sure you want to quit?\nThe URL you are sharing won't exist anymore."
+    "gui_quit_warning": "Are you sure you want to quit?\nThe URL you are sharing won't exist anymore.",
+    "gui_quit_warning_quit": "Quit",
+    "gui_quit_warning_dont_quit": "Don't Quit"
 }
