--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -48,5 +48,6 @@
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
     "gui_quit_warning": "Are you sure you want to quit?\nThe URL you are sharing won't exist anymore.",
     "gui_quit_warning_quit": "Quit",
-    "gui_quit_warning_dont_quit": "Don't Quit"
+    "gui_quit_warning_dont_quit": "Don't Quit",
+    "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL."
 }
