--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -13,6 +13,7 @@
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "URL loaded",
     "close_on_finish": "Stop sharing automatically",
+    "close_on_timeout": "Closing on timeout",
     "closing_automatically": "Closing automatically because download finished",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
