--- a/resources/locale/it.json
+++ b/resources/locale/it.json
@@ -41,5 +41,6 @@
     "gui_please_wait": "Attendere prego...",
     "error_hs_dir_cannot_create": "Impossibile create la cartella per il servizio nascosto {0:s}",
     "error_hs_dir_not_writable": "La cartella per il servizio nascosto {0:s} non ha i permessi di scrittura",
-    "using_ephemeral": "Avviamento del servizio nascosto Tor ephemeral e attesa della pubblicazione"
+    "using_ephemeral": "Avviamento del servizio nascosto Tor ephemeral e attesa della pubblicazione",
+    "zip_progress_bar_format": "Elaborazione files: %p%"
 }
