--- a/resources/locale/nl.json
+++ b/resources/locale/nl.json
@@ -41,5 +41,6 @@
     "gui_please_wait": "Moment geduld...",
     "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
     "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar",
-    "using_ephemeral": "Kortstondige Tor hidden service gestart en in afwachting van publicatie"
+    "using_ephemeral": "Kortstondige Tor hidden service gestart en in afwachting van publicatie",
+    "zip_progress_bar_format": "Bestanden verwerken: %p%"
 }
