Stop saying 'hidden service', start saying 'onion service'

--- a/resources/locale/de.json
+++ b/resources/locale/de.json
@@ -17,9 +17,9 @@
     "large_filesize": "Warnung: Das Senden von großen Dateien kann Stunden dauern",
     "error_tails_invalid_port": "Ungültiger Wert, Port muss eine ganze Zahl sein",
     "error_tails_unknown_root": "Unbekannter Fehler mit Tails root Prozess",
-    "help_tails_port": "Nur für Tails: Port um den Firewall zu öffnen, starte Hidden Service",
+    "help_tails_port": "Nur für Tails: Port um den Firewall zu öffnen, starte onion service",
     "help_local_only": "Nicht mit Tor benutzen, nur für Entwicklung",
-    "help_stay_open": "Den Hidden Service nicht anhalten nachdem ein Download beendet wurde",
+    "help_stay_open": "Den onion service nicht anhalten nachdem ein Download beendet wurde",
     "help_debug": "Fehler auf Festplatte schreiben",
     "help_filename": "Liste der zu teilenden Dateien oder Verzeichnisse",
     "gui_drag_and_drop": "Drag & drop\nDateien hier",
