--- a/resources/locale/cs.json
+++ b/resources/locale/cs.json
@@ -1,9 +1,9 @@
 {
-    "connecting_ctrlport": "Připojuju se na kontrolní port Toru pro nastavení hidden service na portu {0:d}.",
+    "connecting_ctrlport": "Připojuju se na kontrolní port Toru pro nastavení onion service na portu {0:d}.",
     "cant_connect_ctrlport": "Nejde se připojit na kontrolní port Toru na portu {0:s}. OnionShare vyžaduje, aby Tor Browser běžel na pozadí. Pokud ho nemáte, můžete ho stáhnout z https://www.torproject.org/.",
     "cant_connect_socksport": "Nejde se připojit na Tor SOCKS5 server na portu {0:s}. OnionShare vyžaduje, aby Tor Browser běžel na pozadí. Pokud ho nemáte, můžete ho stáhnout z https://www.torproject.org/.",
     "preparing_files": "Připravuji soubory na sdílení.",
-    "wait_for_hs": "Čekám až bude hidden service připravena:",
+    "wait_for_hs": "Čekám až bude onion service připravena:",
     "wait_for_hs_trying": "Zkouším...",
     "wait_for_hs_nope": "Ještě nepřipraven.",
     "wait_for_hs_yup": "Připraven!",
@@ -17,9 +17,9 @@
     "large_filesize": "Varování: Posílání velkých souborů může trvat hodiny",
     "error_tails_invalid_port": "Nesprávná hodnota, port musí být celé číslo",
     "error_tails_unknown_root": "Unknown error with Tails root process",
-    "help_tails_port": "Tails only: port for opening firewall, starting hidden service",
+    "help_tails_port": "Tails only: port for opening firewall, starting onion service",
     "help_local_only": "Nepoužívat Tor: jen pro vývoj",
-    "help_stay_open": "Nechat běžet hidden service po skončení stahování",
+    "help_stay_open": "Nechat běžet onion service po skončení stahování",
     "help_transparent_torification": "My system is transparently torified",
     "help_debug": "Zaznamenat chyby na disk",
     "help_filename": "Seznam souborů a složek ke sdílení",
@@ -35,11 +35,11 @@
     "gui_downloads": "Stahování:",
     "gui_canceled": "Zrušeno",
     "gui_copied_url": "URL zkopírováno do schránky",
-    "gui_starting_server1": "Spouštím Tor hidden service...",
+    "gui_starting_server1": "Spouštím Tor onion service...",
     "gui_starting_server2": "Crunching files...",
-    "gui_starting_server3": "Čekám na Tor hidden service...",
+    "gui_starting_server3": "Čekám na Tor onion service...",
     "gui_please_wait": "Prosím čekejte...",
-    "error_hs_dir_cannot_create": "Nejde vytvořit složka {0:s} pro hidden service",
-    "error_hs_dir_not_writable": "Nejde zapisovat do složky {0:s} pro hidden service",
-    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication"
+    "error_hs_dir_cannot_create": "Nejde vytvořit složka {0:s} pro onion service",
+    "error_hs_dir_not_writable": "Nejde zapisovat do složky {0:s} pro onion service",
+    "using_ephemeral": "Staring ephemeral Tor onion service and awaiting publication"
 }
