--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -1,5 +1,5 @@
 {
-    "connecting_ctrlport": "Connecting to Tor control port to set up hidden service on port {0:d}.",
+    "connecting_ctrlport": "Connecting to Tor control port to set up onion service on port {0:d}.",
     "cant_connect_ctrlport": "Can't connect to Tor control port on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "preparing_files": "Preparing files to share.",
@@ -17,9 +17,9 @@
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
     "error_tails_unknown_root": "Unknown error with Tails root process",
-    "help_tails_port": "Tails only: port for opening firewall, starting hidden service",
+    "help_tails_port": "Tails only: port for opening firewall, starting onion service",
     "help_local_only": "Do not attempt to use tor: for development only",
-    "help_stay_open": "Keep hidden service running after download has finished",
+    "help_stay_open": "Keep onion service running after download has finished",
     "help_transparent_torification": "My system is transparently torified",
     "help_debug": "Log errors to disk",
     "help_filename": "List of files or folders to share",
@@ -35,13 +35,13 @@
     "gui_downloads": "Downloads:",
     "gui_canceled": "Canceled",
     "gui_copied_url": "Copied URL to clipboard",
-    "gui_starting_server1": "Starting Tor hidden service...",
+    "gui_starting_server1": "Starting Tor onion service...",
     "gui_starting_server2": "Crunching files...",
-    "gui_starting_server3": "Waiting for Tor hidden service...",
+    "gui_starting_server3": "Waiting for Tor onion service...",
     "gui_please_wait": "Please wait...",
-    "error_hs_dir_cannot_create": "Cannot create hidden service dir {0:s}",
-    "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable",
-    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication",
+    "error_hs_dir_cannot_create": "Cannot create onion service dir {0:s}",
+    "error_hs_dir_not_writable": "onion service dir {0:s} is not writable",
+    "using_ephemeral": "Staring ephemeral Tor onion service and awaiting publication",
     "gui_download_progress_complete": "%p%, Time Elapsed: {0:s}",
     "gui_download_progress_starting": "{0:s}, %p% (Computing ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
