--- a/resources/locale/eo.json
+++ b/resources/locale/eo.json
@@ -1,5 +1,5 @@
 {
-    "connecting_ctrlport": "Konektas al Tor-kontrolpordo por starigi hidden service je pordo {0:d}.",
+    "connecting_ctrlport": "Konektas al Tor-kontrolpordo por starigi onion service je pordo {0:d}.",
     "cant_connect_ctrlport": "Ne eblas konekti al Tor-kontrolpordo je pordo {0:s}. OnionShare bezonas Tor Browser por esti ŝaltita en la fono. Se vi ne havas ĝin, vi povas ricevi ĝin je https://www.torproject.org/.",
     "cant_connect_socksport": "Ne eblas konekti al Tor-SOCKS5-servilo je pordo {0:s}. OnionShare bezonas Tor Browser por esti ŝaltita en la fono. Se vi ne havas ĝin, vi povas ricevi ĝin je https://www.torproject.org/.",
     "preparing_files": "Preparas dosierojn por kundivido.",
@@ -17,9 +17,9 @@
     "large_filesize": "Atentigo: Sendado de grandaj dosieroj povas daŭri horojn",
     "error_tails_invalid_port": "Malĝusta valoro, pordo devas esti plena nombro",
     "error_tails_unknown_root": "Nekonata eraro kun Tails-root-procezo",
-    "help_tails_port": "Tails only: port for opening firewall, starting hidden service",
+    "help_tails_port": "Tails only: port for opening firewall, starting onion service",
     "help_local_only": "Ne strebu uzi tor: nur por evoluado",
-    "help_stay_open": "Lasu hidden service funkcii post fino de elŝuto",
+    "help_stay_open": "Lasu onion service funkcii post fino de elŝuto",
     "help_transparent_torification": "My system is transparently torified",
     "help_debug": "Protokoli erarojn sur diskon",
     "help_filename": "Listo de dosieroj aŭ dosierujoj por kundividi",
@@ -35,11 +35,11 @@
     "gui_downloads": "Elŝutoj:",
     "gui_canceled": "Nuligita",
     "gui_copied_url": "URL kopiita en tondujon",
-    "gui_starting_server1": "Startigas Tor hidden service...",
+    "gui_starting_server1": "Startigas Tor onion service...",
     "gui_starting_server2": "Crunching files...",
-    "gui_starting_server3": "Atendas por Tor hidden service...",
+    "gui_starting_server3": "Atendas por Tor onion service...",
     "gui_please_wait": "Bonvolu atendi...",
     "error_hs_dir_cannot_create": "Ne eblas krei hidden-service-dosierujon {0:s}",
     "error_hs_dir_not_writable": "Ne eblas konservi dosierojn en hidden-service-dosierujo {0:s}",
-    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication"
+    "using_ephemeral": "Staring ephemeral Tor onion service and awaiting publication"
 }
