--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -1,5 +1,5 @@
 {
-    "connecting_ctrlport": "Connecting to Tor control port to set up onion service on port {0:d}.",
+    "config_onion_service": "Configuring onion service on port {0:d}.",
     "cant_connect_ctrlport": "Can't connect to Tor control port on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "cant_connect_socksport": "Can't connect to Tor SOCKS5 server on port {0:s}. OnionShare requires Tor Browser to be running in the background to work. If you don't have it you can get it from https://www.torproject.org/.",
     "ctrlport_missing_password": "Connected to Tor control port on port {0:s}, but you require a password. You must have the TOR_AUTHENTICATION_PASSWORD environment variable set. Or just open Tor Browser in the background.",
@@ -10,6 +10,7 @@
     "wait_for_hs_nope": "Not ready yet.",
     "wait_for_hs_yup": "Ready!",
     "give_this_url": "Give this URL to the person you're sending the file to:",
+    "give_this_url_stealth": "Give this URL and HidServAuth line to the person you're sending the file to:",
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
     "not_a_file": "{0:s} is not a file.",
     "download_page_loaded": "Download page loaded",
@@ -19,10 +20,10 @@
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
     "error_tails_unknown_root": "Unknown error with Tails root process",
-    "help_tails_port": "Tails only: port for opening firewall, starting onion service",
     "help_local_only": "Do not attempt to use tor: for development only",
     "help_stay_open": "Keep onion service running after download has finished",
     "help_transparent_torification": "My system is transparently torified",
+    "help_stealth": "Create stealth onion service (advanced)",
     "help_debug": "Log errors to disk",
     "help_filename": "List of files or folders to share",
     "gui_drag_and_drop": "Drag and drop\nfiles here",
@@ -52,5 +53,6 @@
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Don't Quit",
     "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL.",
-    "zip_progress_bar_format": "Crunching files: %p%"
+    "zip_progress_bar_format": "Crunching files: %p%",
+    "error_stealth_not_supported": "Your versions of tor or stem are too old. You need to upgrade them to create stealth onion services."
 }
