--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -57,5 +57,6 @@
     "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL.",
     "zip_progress_bar_format": "Crunching files: %p%",
     "error_stealth_not_supported": "Your versions of tor or stem are too old. You need to upgrade them to create stealth onion services.",
-    "create_stealth": "Create stealth onion service (advanced)"
+    "gui_advanced_options": "Advanced options",
+    "gui_create_stealth": "Create stealth onion service"
 }
