Update Dutch translations and add missing strings.

--- a/share/locale/nl.json
+++ b/share/locale/nl.json
@@ -1,13 +1,12 @@
 {
-    "connecting_ctrlport": "Verbinden met de Tor controle port om een verborgen service op te zetten op poort {0:d}.",
-    "cant_connect_ctrlport": "Kan geen verbinding maken met Tor controle poort op poort {0:s}. OnionShare heeft de Tor Browser op de achtergrond nodig om te kunnen werken. Deze kan je verkrijgen via https://www.torproject.org/.",
-    "cant_connect_socksport": "Kan geen verbinding maken met de Tor SOCKS5 server op poort {0:s}. OnionShare heeft de Tor Browser op de achtergrond nodig om te werken. Deze kan je verkrijgen via https://www.torproject.org/.",
+    "config_onion_service": "Onion service configureren op poort {0:d}.",
     "preparing_files": "Bestanden om te delen aan het voorbereiden.",
     "wait_for_hs": "Wachten op gereed zijn van HS:",
     "wait_for_hs_trying": "Proberen...",
     "wait_for_hs_nope": "Nog niet gereed.",
     "wait_for_hs_yup": "Gereed!",
     "give_this_url": "Geef deze URL aan de persoon aan wie je dit bestand verzend:",
+    "give_this_url_stealth": "Geef deze URL en de HidServAuth regel aan de persoon aan wie je dit bestand verzend:",
     "ctrlc_to_stop":  "Druk Ctrl-C om de server te stoppen",
     "not_a_file": "{0:s} is geen bestand.",
     "download_page_loaded": "Downloadpagina geladen",
@@ -17,10 +16,10 @@
     "large_filesize": "Waarschuwing: Versturen van grote bestanden kan uren duren",
     "error_tails_invalid_port": "Ongeldige waarde, poort moet een integer zijn",
     "error_tails_unknown_root": "Onbekende fout met het Tails root proces",
-    "help_tails_port": "Alleen Tails: poort voor het openen van firewall, starten verborgen service",
     "help_local_only": "Maak geen gebruik van Tor, alleen voor ontwikkeling",
     "help_stay_open": "Laat verborgen service draaien nadat download gereed is",
     "help_transparent_torification": "Mijn systeem gebruikt Tor als proxyserver",
+    "help_stealth": "Maak geheime onion service (geavanceerd)",
     "help_debug": "Log fouten naar harde schijf",
     "help_filename": "Lijst van bestanden of mappen om te delen",
     "gui_drag_and_drop": "Sleep en zet\nbestanden hier neer",
@@ -31,16 +30,58 @@
     "gui_choose_folder": "Kies map",
     "gui_start_server": "Start server",
     "gui_stop_server": "Stop server",
-    "gui_copy_url": "Kopier URL",
+    "gui_copy_url": "Kopieer URL",
+    "gui_copy_hidservauth": "Kopieer HidServAuth",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Afgebroken",
     "gui_copied_url": "URL gekopieerd naar klembord",
+    "gui_copied_hidservauth": "HidServAuth regel gekopieerd naar klembord",
     "gui_starting_server1": "Tor onion service wordt gestart...",
     "gui_starting_server2": "Bestanden verwerken...",
-    "gui_starting_server3": "Wachten op Tor onion service...",
     "gui_please_wait": "Moment geduld...",
     "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
     "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar",
     "using_ephemeral": "Kortstondige Tor onion service gestart en in afwachting van publicatie",
-    "zip_progress_bar_format": "Bestanden verwerken: %p%"
+    "gui_download_progress_complete": "%p%, Tijd verstreken: {0:s}",
+    "gui_download_progress_starting": "{0:s}, %p% (ETA berekenen)",
+    "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
+    "version_string": "Onionshare {0:s} | https://onionshare.org/",
+    "gui_quit_warning": "Weet je zeker dat je wilt afsluiten?\nDe URL die je aan het delen bent zal niet meer bestaan.",
+    "gui_quit_warning_quit": "Afsluiten",
+    "gui_quit_warning_dont_quit": "Niet afsluiten",
+    "error_rate_limit": "Een aanvaller probeert misschien je URL te gokken. Om dit te voorkomen heeft OnionShare de server automatisch gestopt. Om de bestanden te delen moet je de server opnieuw starten en de nieuwe URL delen.",
+    "zip_progress_bar_format": "Bestanden verwerken: %p%",
+    "error_stealth_not_supported": "Om een geheime onion service te maken heb je minstens Tor 0.2.9.1-alpha (of Tor Browser 6.5) en minstens python3-stem 1.5.0 nodig.",
+    "error_ephemeral_not_supported": "OnionShare vereist minstens Tor 0.2.7.1 en minstens python3-stem 1.4.0.",
+    "gui_advanced_options": "Geavanceerde Opties",
+    "gui_create_stealth": "Maak geheime Onion Service",
+    "gui_menu_file_menu": "&Bestand",
+    "gui_menu_settings_action": "&Instellingen",
+    "gui_menu_quit_action": "&Afsluiten",
+    "gui_settings_window_title": "Instellingen",
+    "gui_settings_connection_type_label": "Hoe moet OnionShare verbinden met Tor?",
+    "gui_settings_connection_type_automatic_option": "Probeer automatische configuratie met Tor Browser",
+    "gui_settings_connection_type_control_port_option": "Verbinden via controle poort",
+    "gui_settings_connection_type_socket_file_option": "Verbinden via socket bestand",
+    "gui_settings_control_port_label": "Controle poort",
+    "gui_settings_socket_file_label": "Socket bestand",
+    "gui_settings_authenticate_label": "Tor authenticatie opties",
+    "gui_settings_authenticate_no_auth_option": "Geen authenticatie of cookie authenticatie",
+    "gui_settings_authenticate_password_option": "Wachtwoord",
+    "gui_settings_authenticate_cookie_option": "Cookie",
+    "gui_settings_password_label": "Wachtwoord",
+    "gui_settings_cookie_label": "Cookie pad",
+    "gui_settings_button_test": "Test Instellingen",
+    "gui_settings_button_save": "Opslaan",
+    "gui_settings_button_cancel": "Annuleren",
+    "settings_saved": "Instellingen opgeslagen in {}",
+    "settings_error_unknown": "Kan geen verbinding maken met de Tor controller omdat de instellingen niet kloppen.",
+    "settings_error_automatic": "Kan geen verbinding maken met de Tor controller. Draait Tor Browser in de achtergrond? Deze kan je verkrijgen via https://www.torproject.org/.",
+    "settings_error_socket_port": "Kan geen verbinding maken met de Tor controller op {}:{}.",
+    "settings_error_socket_file": "Kan geen verbinding maken met de Tor controller via socket bestand {}.",
+    "settings_error_auth": "Verbonden met {}:{}, maar kan niet authenticeren. Misschien is het geen Tor controller?",
+    "settings_error_missing_password": "Verbonden met Tor controller, maar het heeft een wachtwoord nodig voor authenticatie.",
+    "settings_error_unreadable_cookie_file": "Verbonden met Tor controller, maar kan niet authenticeren omdat wachtwoord onjuist is en gebruiker heeft niet de permissies om cookie bestand te lezen.",
+    "settings_test_success": "Gefeliciteerd, OnionShare kan verbinden met de Tor controller.\n\nTor version: {}\nOndersteunt kortstondige onion services: {}\nOndersteunt geheime onion services: {}",
+    "error_tor_protocol_error": "Fout bij praten met de Tor controller.\nAls je Whonix gebruikt, kijk dan hier https://www.whonix.org/wiki/onionshare om OnionShare werkend te krijgen."
 }
