Fix json typo in Russian translation

--- a/share/locale/ru.json
+++ b/share/locale/ru.json
@@ -6,6 +6,6 @@
     "not_a_file": "{0:s} не является файлом.",
     "gui_copied_url": "Ссылка скопирована в буфер обмена",
     "download_page_loaded": "Страница закачки загружена",
-    "other_page_loaded": "Другая страница была загружена"
+    "other_page_loaded": "Другая страница была загружена",
     "gui_copy_url": "Скопировать ссылку"
 }
