Connecting to Tor in bundled mode now creates a temporary tor data dir, starts a new tor process, and connects to it. Also, refactored Settings dialog to allow Linux to use bundled tor as well

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -90,5 +90,6 @@
     "error_tor_protocol_error": "Error talking to the Tor controller.\nIf you're using Whonix, check out https://www.whonix.org/wiki/onionshare to make OnionShare work.",
     "gui_tor_window_title": "Tor Connection",
     "gui_tor_button_close": "Close",
-    "gui_tor_button_restart": "Restart Tor"
+    "gui_tor_button_restart": "Restart Tor",
+    "connecting_to_tor": "Connecting to the Tor network"
 }
