Rearranged settings layout so that all Tor-related settings are inside of the 'How should OnionShare connect to Tor?' box, including the Test Tor Settings button

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -66,6 +66,7 @@
     "gui_settings_connection_type_automatic_option": "Attempt automatic configuration with Tor Browser",
     "gui_settings_connection_type_control_port_option": "Connect using control port",
     "gui_settings_connection_type_socket_file_option": "Connect using socket file",
+    "gui_settings_connection_type_test_button": "Test Tor Settings",
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
     "gui_settings_authenticate_label": "Tor authentication options",
@@ -74,7 +75,6 @@
     "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Password",
     "gui_settings_cookie_label": "Cookie path",
-    "gui_settings_button_test": "Test Settings",
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
     "settings_saved": "Settings saved to {}",
